# GTFSWeaver

./: .gitignore  .gitmessages.txt  README.rst  potential_skeleton.txt  pyproject.toml
GTFSWeaver/: __init__.py  builders.py  models.py  readers.py
data/cabo_frio/: make_gtfs_template.xlsx
docs/: conf.py
examples/: weaving_guide.rst
notebooks/: diagnostico_operacional.ipynb  fix_itinerarios_direction.py  gtfs_diag_helpers.py  gtfs_diagnostics.ipynb  gtfs_diagnostics_refactored.ipynb  gtfs_diagnostics_revised.ipynb  gtfs_diagnostics_schwabish(1).ipynb  gtfs_diagnostics_schwabish_v2.ipynb  pipeflow.ipynb  prototype_speed_zones.ipynb
pysrc/gtfsweaver/: routing.py
src/GTFSWeaver/: __init__.py  builders.py  cli.py  constants.py  geometry.py  models.py  qa.py  readers.py  time_utils.py  validators.py
tests/: context.py  test_cli.py  test_main.py  test_protofeed.py  test_validators.py
