[project]
name = "gtfsweaver"
version = "4.1.1"
description = "A Python 3.10+ library to build GTFS feeds from basic route information."
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Alexander Raichev", email = "araichev@mrcagney.com" },
]
dependencies = [
    "click>=8.1.7",
    "gtfs-kit>=8",
    "pandera>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["GTFSWeaver"]


[project.scripts]
gtfsweaver = "GTFSWeaver.cli:make_gtfs"