[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gtfsweaver"
version = "0.1.0"
description = "Build GTFS feeds from basic route information and operational schedules."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jose" },
]
keywords = [
    "gtfs",
    "transit",
    "transport",
    "mobility",
    "urban",
    "geospatial",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "geopandas>=1.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "shapely>=2.0",
    "fiona>=1.9",
    "pyproj>=3.6",
    "gtfs-kit>=12.0",
    "pandera>=0.18",
    "pycountry>=23.12",
    "pytz>=2023.3",
    "click>=8.1",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
h3 = [
    "h3>=4.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "pandas-stubs>=2.0",
]
all = [
    "gtfsweaver[h3,dev]",
]

[project.urls]
Homepage = "https://github.com/jose/gtfsweaver"
Repository = "https://github.com/jose/gtfsweaver"
Issues = "https://github.com/jose/gtfsweaver/issues"

[project.scripts]
gtfsweaver = "gtfsweaver.cli:cli"

# ── Hatch build config ──────────────────────────────────────────────

[tool.hatch.build.targets.wheel]
packages = ["src/gtfsweaver"]

[tool.hatch.build.targets.sdist]
include = [
    "src/gtfsweaver/",
    "tests/",
    "README.md",
    "LICENSE",
]

# ── Ruff ─────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py310"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "B008",    # function call in default argument (click)
    "SIM108",  # ternary operator (readability)
    "RUF012",  # mutable class default (dataclass fields)
]

[tool.ruff.lint.isort]
known-first-party = ["gtfsweaver"]

# ── Pytest ───────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-q",
]
markers = [
    "slow: marks tests that require real geo data or network access",
]

# ── Mypy ─────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_untyped_defs = false       # too strict for geopandas-heavy code
ignore_missing_imports = true       # geopandas/gtfs_kit stubs incomplete

# ── Coverage ─────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["gtfsweaver"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
    "raise NotImplementedError",
]
