[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gtfsweaver"
version = "0.1.0"
description = "Build GTFS feeds from basic route information and operational schedules."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Jose" }]
keywords = [
  "gtfs",
  "transit",
  "transport",
  "mobility",
  "urban",
  "geospatial",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
  "click>=8.1",
  "fiona>=1.9",
  "geopandas>=1.0",
  "gtfs-kit>=12.0",
  "numpy>=1.24",
  "openpyxl>=3.1",
  "pandas>=2.0",
  "pandera>=0.18",
  "pycountry>=23.12",
  "pyproj>=3.6",
  "pytz>=2023.3",
  "shapely>=2.0",
]

[project.optional-dependencies]
h3 = ["h3>=4.0"]
dev = [
  "mypy>=1.8",
  "pandas-stubs>=2.0",
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.4",
]
all = [
  "h3>=4.0",
  "mypy>=1.8",
  "pandas-stubs>=2.0",
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.4",
]

[project.urls]
Repository = "https://github.com/jose/gtfsweaver"
Issues = "https://github.com/jose/gtfsweaver/issues"

[project.scripts]
gtfsweaver = "gtfsweaver.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/gtfsweaver"]

[tool.hatch.build.targets.sdist]
include = [
  "src/gtfsweaver/",
  "tests/",
  "README.md",
  "LICENSE",
]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "I",
  "N",
  "UP",
  "B",
  "SIM",
  "TCH",
  "RUF",
]
ignore = [
  "B008",
  "RUF012",
  "SIM108",
]

[tool.ruff.lint.isort]
known-first-party = ["gtfsweaver"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
  "--strict-markers",
  "--tb=short",
  "-q",
]
markers = [
  "slow: marks tests that require real geo data or heavy geo processing",
  "e2e: marks end-to-end tests",
  "integration: marks integration tests",
]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/gtfsweaver"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if __name__",
  "raise NotImplementedError",
]